@@ -452,7 +452,7 @@ static char *opsys(struct rm_attribute *);
 static char *requname(struct rm_attribute *);
 static char *validuser(struct rm_attribute *);
 static char *reqmsg(struct rm_attribute *);
-static char *reqgres(struct rm_attribute *);
+char *reqgres(struct rm_attribute *);
 static char *reqstate(struct rm_attribute *);
 static char *getjoblist(struct rm_attribute *);
 static char *reqvarattr(struct rm_attribute *);
@@ -1076,7 +1076,7 @@ retryread:
 
 
 
-static char *reqgres(
+char *reqgres(
 
   struct rm_attribute *attrib)  /* I (ignored) */
 
